--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
         <!-- jQuery -->
         <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 
-        <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/18dea9f2a9.js" crossorigin="anonymous"></script>
-
         <!-- Bootstrap 4 -->
         <link rel="stylesheet" href="{%  static 'css/bootstrap.min.css' %}" />
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/popper.min.js' %}"></script>
+
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/18dea9f2a9.js" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
