--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
         {# Title #}
         <div class="container-fluid vh-100 bg-light text-dark d-flex flex-column align-items-center">
 
-
             <div class="h-50 text-center mt-auto">
                 <h1 class="display-1 border-bottom border-danger pb-2">Benjamin Palko</h1>
                 <h4 class="display-4">Software Engineer</h4>
@@ -34,18 +33,17 @@
 
             <h1 class="display-2 border-bottom border-danger text-center mb-2">About</h1>
 
-            <div class="dynamic-text text-center">
+            <div class="container dynamic-text text-center">
 
                 <p>
-                    I'm a Software Engineering graduate from Carleton University living in Brockville,
-                    ON.
+                    I'm a Software Engineering graduate from Carleton University.
                 </p>
                 <p>
-                    I currently work as a Junior Developer at Bizxcel <a target="_blank"
-                                                                         href="https://www.bizxcel.com/"><i
-                        class="fas fa-link text-info"></i></a>, spending the majority of my time with
-                    Java EE application servers. I work mainly Wildfly and Oracle databases for mapping
-                    logic of insurance data.
+                    I currently work as a Full-stack Junior Developer at Bizxcel <sup><a target="_blank"
+                                                                                         href="https://www.bizxcel.com/"><i
+                        class="fas fa-external-link-alt text-primary"></i></a></sup>, spending the majority of my time with
+                    Java EE application servers. I work mainly with Wildfly and Oracle databases for mapping
+                    logic of insurance data along with various smaller support applications.
                 </p>
             </div>
 
@@ -83,26 +81,47 @@
             <div class="d-flex justify-content-around">
                 <div class="text-center">
                     <h5>Web Development</h5>
-                    <i class="fab fa-bootstrap fa-2x mx-1"></i>
-                    <i class="fab fa-html5 fa-2x mx-1"></i>
-                    <i class="fab fa-aws fa-2x mx-1"></i>
-                    <i class="fab fa-heroku fa-2x mx-1"></i>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Bootstrap">
+                        <i class="fab fa-bootstrap fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="HTML5">
+                        <i class="fab fa-html5 fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Amazon Web Service">
+                        <i class="fab fa-aws fa-2x mx-1"></i>
+                    </span>
                 </div>
                 <div class="text-center">
                     <h5>Misc</h5>
-                    <i class="fab fa-unity fa-2x mx-2"></i>
-                    <i class="fab fa-docker fa-2x mx-2"></i>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Unity">
+                        <i class="fab fa-unity fa-2x mx-2"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Docker">
+                        <i class="fab fa-docker fa-2x mx-2"></i>
+                    </span>
                 </div>
                 <div class="text-center">
                     <h5>Operating Systems</h5>
-                    <i class="fab fa-windows fa-2x mx-1"></i>
-                    <i class="fab fa-ubuntu fa-2x mx-1"></i>
-                    <i class="fab fa-fedora fa-2x mx-1"></i>
-                    <i class="fab fa-raspberry-pi fa-2x mx-1"></i>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Windows 10">
+                        <i class="fab fa-windows fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Ubuntu Desktop">
+                        <i class="fab fa-ubuntu fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Fedora">
+                        <i class="fab fa-fedora fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Raspberry Pi">
+                        <i class="fab fa-raspberry-pi fa-2x mx-1"></i>
+                    </span>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Linux Bash">
+                        <i class="fab fa-linux fa-2x mx-1"></i>
+                    </span>
                 </div>
             </div>
 
-            <p class="text-center dynamic-text border-bottom border-danger w-25 align-self-center pb-3">Bash | Restful API | CI/CD (Travis) | Subversion | C#</p>
+            <p class="text-center dynamic-text border-bottom border-danger w-25 align-self-center pb-3">Bash | Restful
+                API | CI/CD (Travis) | Subversion | C#</p>
 
         </div>
 
@@ -143,7 +162,7 @@
                 <h1 class="display-3 text-center pt-5 border-bottom border-danger">Contact</h1>
             </div>
 
-            <div class="row">
+            <div class="row h-25">
                 <div class="col d-flex justify-content-center">
                     <div class="flex-column text-center">
                         <h3 class="text-danger">Benjamin Palko</h3>
@@ -153,7 +172,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row h-50">
                 <div class="col-3"></div>
                 <div class="col-6 d-flex justify-content-around">
                     <div class="text-center">
@@ -169,9 +188,9 @@
                         </a>
                     </div>
                     <div class="text-center">
-                        <a class="btn" target="_blank" href="https://discord.gg/h98QHsY">
-                            <i class="fab fa-discord fa-3x text-light"></i>
-                            <p class="dynamic-text text-light">Discord</p>
+                        <a class="btn" target="_blank" href="https://twitter.com/benjaminpalko">
+                            <i class="fab fa-twitter fa-3x text-light"></i>
+                            <p class="dynamic-text text-light">Twitter</p>
                         </a>
                     </div>
                     <div class="text-center">
@@ -179,20 +198,22 @@
                             <i class="fab fa-linkedin fa-3x text-light"></i>
                             <p class="dynamic-text text-light">LinkedIn</p>
                         </a>
-
                     </div>
+                    {# https://discord.gg/h98QHsY #}
                 </div>
                 <div class="col-3"></div>
             </div>
 
+        </div>
+
+        <div class="container-fluid bg-light text-dark">
             <div class="text-center d-flex h-25">
                 <a class="mx-auto align-self-end" target="_blank" href="https://www.heroku.com/">
-                    <img class="img-fluid bg-dark"
-                         src="{% static 'images/built-on-heroku-light.svg' %}" height="150" width="300"
+                    <img class="img-fluid text-dark"
+                         src="{% static 'images/built-on-heroku-dark.svg' %}" height="150" width="300"
                          alt="Built on Heroku" type="image/svg"/>
                 </a>
             </div>
-
         </div>
 
     </div>
@@ -202,6 +223,11 @@
 
 {# Javascript #}
 {% block scripts %}
+    <script type="text/javascript">
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        });
+    </script>
     <script>
         $(document).ready(function () {
             // Add smooth scrolling to all links
